# trakdip-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  prometheus.yml  pyproject.toml
.github/actions/: provision-environment-infra.yml
.github/workflows/: ci-pipeline.yml  create-infrastructure.yml  create-terraform-backend-resources.yml
infrastructure/: network.tf
infrastructure/aws/: auto_scaling.tf  cloudfront.tf  ecs.tf  iam.tf  load_balancer.tf  main.tf  network.tf  output.tf  postgres.tf  secret.tf  security_group.tf  variables.tf
infrastructure/aws/variables/: dev.tfbackend  prod.tfbackend  staging.tfbackend
infrastructure/initial/: main.tf  variables.tf
scripts/: entrypoint.sh
src/api/: .env.sample  conftest.py
src/api/account/admin/: user_admin.py
src/api/account/migrations/: 0001_initial.py
src/api/account/models/: user.py
src/api/authentication/: urls.py
src/api/authentication/serializers/: __init__.py  change_password_serializer.py  jwt_token_serializer.py  login_serializer.py  register_serializer.py  user_token_serializer.py
src/api/authentication/views/: __init__.py  change_password_view.py  email_exists_view.py  login_view.py  register_view.py
src/api/core/: admin.py  storage_backends.py  utils.py
src/api/expense/: admin.py  filters.py  urls.py
src/api/expense/migrations/: 0001_initial.py  0002_alter_expense_timestamp.py  0003_alter_expense_timestamp.py  0004_expense_created_at_expense_updated_at.py  (+1 more)
src/api/expense/models/: __init__.py  (+2 more)
src/api/project/: settings.py  urls.py
(+20 files in other folders)
