[tool.poetry]
name = "trakdip-backend"
version = "1.0.0"
description = "Trakdip is an expense tracker that helps user log their expenses and also features insights for users to make informed decisions on their expenditures."
authors = ["Osayi Akoko <osayistreams@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.15.1"
djangorestframework-camel-case = "^1.4.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-split-settings = "^1.3.0"
drf-spectacular = "^0.27.1"
psycopg2-binary = "^2.9.9"
user-agents = "^2.2.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest-django = "^4.8.0"
pytest-xdist = "^3.5.0"
model-bakery = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
django_find_project = false
python_files = ["**/test*.py", ]
pythonpath = "./src/api"